Added support for loaders and file creator
